--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 
   <body>
     <div id="app"></div>
+    <header class="header">
+      <h2>Calculate with two numbers</h2>
+      <div class="label">Enter two number and click on the button:</div>
+      <div class="input-box">
+        <textarea id="input-box-1" placeholder="Insert number 1"></textarea>
+        <textarea id="input-box-2" placeholder="Insert number 2"></textarea>
+      </div>
+      <div class="buttons">
+        <button id="btn-add">Add</button>
+        <button id="btn-subtract">Subtract</button>
+        <button id="btn-multiply">Multiply</button>
+        <button id="btn-divide">Divide</button>
+      </div>
+      <div class="label">Output will apear here:</div>
+      <div id="output-box"></div>
+    </header>
 
     <script src="src/index.js"></script>
   </body>
